# batchalign

./: #README.md#  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  README.org  README.txt  analyze.py  batchalign.py  batchalign.spec  bld.bat  build.sh  check.py  clan.py  disfluencies.cut  docker-in.yml  environment.yml  execute.sh  fa.py  htk.patch  meta.yaml  rep-join.cut  retokenize.py  run.sh  setup.py  setup.sh  textgrid.py  transcriber.py  transcript.py  utokengine.py  utterance.py  verify.py
baln/opt/CLANUtils/src/: 0README.TXT  Anvil2Chat.cpp  CMakeLists.txt  Chat2Anvil.cpp  Chat2CA.cpp  Chat2Elan.cpp  Chat2Praat.cpp  Chat2Xmar.cpp  Cp2UTF8.cpp  DataCleanUp.cpp  Elan2Chat.cpp  FixBullets.cpp  Fixca.cpp  Lena2Chat.cpp  Makefile  Makefile.Linux  Makefile.Windows  Makefile.base  Makefile.darwin  Makefile.win  Play2Chat.cpp  Praat2Chat.cpp  Quotes.cpp  Srt2Chat.cpp  StdAfx.h  TrnFix.cpp  c_clan.h  c_curses.h  c_ver.cpp  chains.cpp  check.cpp  check.h  chip.cpp  chip.h  chip_utl.cpp  chstring.cpp  codes-p.cpp  combo.cpp  combtier.cpp  common.h  (+68 more)
baln/opt/CLANUtils/src/megrasp/: Makefile.txt  README-0.8b.txt  blmvm.cpp  blmvm.h  ksutil.h  maxent.cpp  maxent.h  megrasp.cpp  model2c.cpp
baln/opt/CLANUtils/src/mor/: arules.cpp  crules.cpp  drules.cpp  globals.cpp  lex-trie.cpp  mor.cpp  morlib.cpp  morph.h  proto.h
baln/opt/CLANUtils/src/post/: anaalgo.cpp  atom.cpp  atom.hpp  bool.hpp  brillanx.cpp  brilltagger.cpp  compound.cpp  compound.hpp  compoundlib.cpp  constr.cpp  constr.hpp  contextrl.cpp  darray.cpp  darray.hpp  darrayP.hpp  database.cpp  (+41 more)
(+59 files in other folders)
